--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
+    "jest": "^27.5.1",
     "prettier": "2.8.4"
   }
 }
